--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,15 +7,15 @@ services:
     volumes:
       - './drupal-files:/opt/drupal'
     depends_on:
-      - 'mariadb'
+      - 'local-mariadb'
     
-  mariadb:
+  local-mariadb:
     image: 'mariadb'
     environment:
       MARIADB_ROOT_PASSWORD: 'root'
-      MARIADB_DATABASE: 'database'
-      MARIADB_USER: 'database'
-      MARIADB_PASSWORD: 'database'
+      MARIADB_DATABASE: 'localdb'
+      MARIADB_USER: 'localdb'
+      MARIADB_PASSWORD: 'localdb'
     volumes:
       - './mariadb-data:/var/lib/mysql'
 
